# hdx-scraper-unesco

./: README.md  crontab  docker-compose.yml  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py  unesco.py
.github/workflows/: build.yaml  build.yml  publish.yaml
config/: hdx_dataset_static.yaml  hdx_resource_view_static.yml  project_configuration.yml
src/hdx/scraper/unesco/: __main__.py  pipeline.py
tests/: test_unesco.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: EDUN_CPV.csv  EDUN_indicatorlist.csv  NATMON_DATA_NATIONAL.csv  NATMON_METADATA.csv  NATMON_data_AFG.csv  NATMON_indicatorlist_AFG.csv  NATMON_metadata_AFG.csv  qc_EDUN_CPV.csv  qc_NATMON_data_AFG.csv
