#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-unesco"
requires-python = ">=3.12"
dependencies = [
  "hdx-python-api>= 6.5.2",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-unesco"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.unesco.__main__:main"
